--- a/index.html
+++ b/index.html
@@ -339,15 +339,15 @@
             { t: "creativity", text: "WE ARE NOT DATA POINTS" },
             { t: "rights", text: "THE RIGHT TO REFUSE" },
             { t: "environment", text: "WATER > DATA CENTERS" },
-            { t: "democracy", text: "NO ALGORITHMIC MANAGERS" },
+            { t: "democracy", text: "NO ALGORITHMIC MANAGERS, WHERE ARE THE HUMANS?" },
             { t: "data", text: "DATA SOVEREIGNTY" },
-            { t: "economy", text: "WORKER-OWNED PLATFORMS" },
+            { t: "economy", text: "WORKER-OWNED TECHNOLOGIES" },
             { t: "policy", text: "OPEN THE BLACK BOX" },
             { t: "equity", text: "NOTHING ABOUT US WITHOUT US" },
             { t: "economy", text: "PUBLIC GOODS, NOT MONOPOLIES" },
-            { t: "creativity", text: "REST IS RESISTANCE" },
-            { t: "rights", text: "OUR ARCHIVES, OUR CHOICE" },
-            { t: "policy", text: "INNOVATION NOT EXPLOITATION" }
+            { t: "creativity", text: "REST IS OUR RIGHT" },
+            { t: "rights", text: "AI, STOP STEALING OUR WORK" },
+            { t: "policy", text: "YOU SAY INNOVATION, WE SAY ITS EXPLOITATION" }
         ];
 
         // --- SIMULATION SETUP ---
