--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Loudspeaker: Thought Constellation</title>
+    <title>Workers' Thought Constellation</title>
     <style>
         :root {
             --bg-color: #050510;
@@ -104,8 +104,8 @@
         .legend-item:hover { background: rgba(255,255,255,0.1); }
         .dot { width: 8px; height: 8px; border-radius: 50%; }
 
-        /* Loudspeaker Panel (Bottom Right) */
-        #loudspeaker-panel {
+        /* Workers' Thought Constellation Panel (Bottom Right) */
+        #Workers' Thought Constellation-panel {
             pointer-events: auto;
             position: absolute;
             bottom: 2rem;
@@ -129,7 +129,7 @@
             z-index: 100;
         }
 
-        #loudspeaker-panel.hidden {
+        #Workers' Thought Constellation-panel.hidden {
             transform: translateY(150%);
         }
 
@@ -205,7 +205,7 @@
         }
 
         @media (max-width: 768px) {
-            #loudspeaker-panel {
+            #Workers' Thought Constellation-panel {
                 bottom: 0;
                 right: 0;
                 width: 100%;
@@ -228,7 +228,7 @@
 
     <div id="ui-layer">
         <header>
-            <h1>The Loudspeaker</h1>
+            <h1>The Workers' Thought Constellation</h1>
             <div class="subtitle">Mapping Our Participants' Perspectives and Collective Consciousness</div>
             
             <div class="legend" id="main-legend">
@@ -243,7 +243,7 @@
             </div>
         </header>
 
-        <div id="loudspeaker-panel" class="hidden">
+        <div id="Workers' Thought Constellation-panel" class="hidden">
             <div class="panel-header">
                 <span>Broadcast Signal</span>
                 <span id="thought-category">THEME</span>
@@ -690,7 +690,7 @@
             });
         });
 
-        const panel = document.getElementById('loudspeaker-panel');
+        const panel = document.getElementById('Workers' Thought Constellation-panel');
         const thoughtDisplay = document.getElementById('thought-display');
         const categoryDisplay = document.getElementById('thought-category');
         const closeBtn = document.getElementById('close-panel-btn');
