--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     <div id="ui-layer">
         <header>
             <h1>The Workers' Thought Constellation</h1>
-            <div class="subtitle">Mapping Our Participants' Perspectives and Collective Consciousness</div>
+            <div class="subtitle">Mapping Our Participants' Perspectives </div>
             
             <div class="legend" id="main-legend">
                 <div class="legend-item" onclick="filterNodes('creativity')"><div class="dot" style="background:var(--color-creativity)"></div>Creativity & Autonomy</div>
