--- a/index.html
+++ b/index.html
@@ -288,11 +288,11 @@ Worker in progress
 
         <div id="loudspeaker-panel" class="hidden">
             <div class="panel-header">
-                <span>Signal Received</span>
+                <span>Slogan</span>
                 <span id="thought-category">THEME</span>
             </div>
             <div id="thought-display">
-                Hover over a node to preview. Click to lock signal.
+                Hover over a node to preview. Click to lock slogan.
             </div>
             <div class="instruction" id="close-panel-btn">
                 [CLOSE TRANSMISSION]
